feat(front): Implement of the user login, first version of modal to show potential error and storing the JWT token for later use.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,7 +12,8 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/preflight.css">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="scripts/script.js" defer></script>
+	<script src="./scripts/modale.js"></script>
+	<script src="./scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -20,8 +21,8 @@
 		<h1><a href="./index.html">Sophie Bluel <span>Architecte d'intérieur</span></a></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
-				<li>contact</li>
+				<li><a href="#portfolio">projets</a></li>
+				<li><a href="#contact">contact</a></li>
 				<li><a href="./login.html">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
