feat(front): Final implementation of user login, verifications, modal, and edit mode

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,11 +9,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
-	<meta name="description" content="">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+		crossorigin="anonymous" referrerpolicy="no-referrer">
+	<meta name="description" content="Portfolio de Sophie Bluel, architecte d'intérieur">
 	<link rel="stylesheet" href="./assets/preflight.css">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="./scripts/modale.js"></script>
-	<script src="./scripts/script.js" defer></script>
+	<script src="./scripts/field-validation.js" defer></script>
+	<script src="./scripts/base-index.js" defer></script>
+	<script src="./scripts/edit-index.js" defer></script>
+	<script src="./scripts/index.js" defer></script>
 </head>
 
 <body>
@@ -45,7 +50,9 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes projets</h2>
+			<div class="gallery-title">
+				<h2>Mes projets</h2>
+			</div>
 			<div class="gallery">
 			</div>
 		</section>
