--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,8 +12,8 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/preflight.css">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="./scripts/modale.js"></script>
-	<script src="./scripts/login.js"></script>
+	<script src="./scripts/field-validation.js" defer></script>
+	<script src="./scripts/login.js" defer></script>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 		<section class="submit-section" id="login">
 			<h2>Log In</h2>
 			<form class="submit-form" action="#" method="post">
-				<label for="email">Email</label>
+				<label for="email">E-mail</label>
 				<input type="email" name="email" id="email">
 				<label for="password">Mot de passe</label>
 				<input type="password" name="password" id="password">
